# ParallelZFinding

./: .gitignore  Analysis.h  CMakeLists.txt  INTT_xyFinding.C  INTT_zFinding_Algorithm.C  InttZFinding_debug_ver_3.C  LabLog.md  MBD_Analysis.C  Mocktilt_plan2_histo_zFinding.c  Mocktilt_plan2_para_zfinding.cpp  MultiplicityAnalysis.C  README.md  Readme.md  ResultsAnalysis.C  RootFileBuilder.C  RootFileChecker.C  dPhi_Fitter.C  globalDefinitions.h  para_dEta.cpp  para_dPhi.cpp  zFinding.h
Tools/: rootFileChecker_AI.C
headers/: Analysis.h  CommonParaFuncs.h  Readme.md  globalDefinitions.h  histogramPlotting.h  xyFinding.h  zFinding.h
multiplicity/: centralization.C  realtrick.C
rootData/: metrics.root
xyFinding/: Mocktilt_original_xy_finding.C  Mocktilt_xy_finding.C
xyFindingResults/: foundXY_MBD0_10_DCAfit_0_16_-001_001_2e-1.txt
zFindingResults/: dummy.txt  foundZ_DCA_npeaks-8_8_-010_010_1e-1.txt  foundZ_MBD0_10_DCA_0_16_-001_001_2e-1.txt  foundZ_MBD0_10_DCAfit_0_16_-001_001_2e-1.txt  foundZ_MBD0_10_DCAfit_0_16_-001_001_step2e-1_z_30_10.txt  foundZ_allInfo_DCA_-8_8_-010_010_2e-1.txt  foundZ_allInfo_DCA_0_16_-001_001_2e-1.txt  foundZ_debug2_DCA_-16_16_-015_015.txt  foundZ_debug2_DCA_-8_8_-010_000_1e-1.txt  foundZ_debug2_DCA_-8_8_-010_010_1e-2.txt  foundZ_debug2_DCA_-8_8_-010_010_2e-1.txt  foundZ_debug2_DCA_-8_8_000_010_2e-1.txt  foundZ_debug2_DCA_biased copy.txt  foundZ_debug2_DCA_doubled.txt  foundZ_debug2_nearest_z copy.txt  foundZ_debug2_nearest_z_no_fit.txt  new_foundZ_DCAfit_0_16_-001_001_step2e-1_z_25_5.txt
